pod-custom-resource.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-test
  labels:
    app: myappp
spec:
  containers:
  - name: nginx-app
    image: nginx
    ports:
	- containerPort: 8080
    resources:
	  requests:
	    memory: "1Gi"
		cpu: 1
	  limits:
	    memory: "2Gi"
		cpu: 2
