pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-test
  labels:
    app: myappp
spec:
  containers:
  - name: nginx-app
    image: nginx
