service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-test
spec:
  type: LoadBalancer
  ports:
  - targetPort: 80
    port: 80
    nodePort: 30008
  selector:
      app: myappp
