egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: api-pod
    ports:
    - protocol: TCP
      port: 3306
  egress:
  - to:
    - ipBlock:
        cidr: ip/32
    ports:
    - protocol: TCP
      port: 80
  - ports:  # internal DNS port, kube-DNS is exposed on port 53
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
